@@ -9,6 +9,9 @@ Change log
 
 0.9u:
 
+    - Fixed a bug regarding the phase computation for LFOs running in "segmentPair" mode. Whenever the speed was set to something
+      other than 1, the off-segment's phase was incorrect.
+
 
 0.8: 2015-04-28
 
